--- a/tailwind.css
+++ b/tailwind.css
@@ -14,6 +14,23 @@
   position: relative
 }
 
+.right-5 {
+  right: 1.25rem
+}
+
+.top-5 {
+  top: 1.25rem
+}
+
+.z-10 {
+  z-index: 10
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem
+}
+
 .mb-5 {
   margin-bottom: 1.25rem
 }
@@ -70,6 +87,10 @@
   border-width: 1px
 }
 
+.border-b {
+  border-bottom-width: 1px
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity))
@@ -84,12 +105,26 @@
   padding-right: 2.5rem
 }
 
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem
+}
+
 .pt-5 {
   padding-top: 1.25rem
 }
 
 .pb-0 {
   padding-bottom: 0px
+}
+
+.text-center {
+  text-align: center
 }
 
 .text-2xl {
@@ -102,6 +137,11 @@
   line-height: 1.25rem
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem
+}
+
 .font-bold {
   font-weight: 700
 }
@@ -112,4 +152,8 @@
 
 .capitalize {
   text-transform: capitalize
+}
+
+.italic {
+  font-style: italic
 }
